# MicroTAR: Basic tar v7 library.
PROJECT(microtar LANGUAGES C)

ADD_LIBRARY(${PROJECT_NAME} STATIC src/microtar.c)
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/src")
DO_SPLIT_DEBUG(${PROJECT_NAME})

# Unix: Add -fpic/-fPIC in order to use this static library in plugins.
IF(UNIX AND NOT APPLE)
	SET(CMAKE_C_FLAGS	"${CMAKE_C_FLAGS} -fpic -fPIC")
	SET(CMAKE_CXX_FLAGS	"${CMAKE_CXX_FLAGS} -fpic -fPIC")
ENDIF(UNIX AND NOT APPLE)
